[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-Langchain"
version = "0.0.1"
description = "Flask extension for Langchain"
authors = [{name="Francis Jervis", email="francisjervis@gmail.com"}]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flask", "langchain", "llm"]
dependencies = [
    "flask",
    "langchain",
    "chromadb",
    ]
requires-python = ">=3.7"
[project.urls]
Homepage = "https://github.com/francisjervis/flask-langchain"
